[gd_scene load_steps=2 format=3 uid="uid://wfj6b11wkwx2"]

[ext_resource type="Script" uid="uid://dwjst2sj81jyo" path="res://levels/characterCreation/ui/NameInputPanel.gd" id="1_1x2y3"]

[node name="NameInputPanel" type="CenterContainer"]
script = ExtResource("1_1x2y3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "What is your name?"
horizontal_alignment = 1

[node name="NameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "..."

[node name="SubmitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Submit"

[node name="ErrorLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Error message"
horizontal_alignment = 1
